tests/baselines/reference/jsFileCompilationErrorOnDeclarationsWithJsFileReferenceWithNoOut.errors.txt
error TS5055: Cannot write file 'c.js' because it would overwrite input file.
  Adding a tsconfig.json file will help organize projects that contain both TypeScript and JavaScript files. Learn more at https://aka.ms/tsconfig.
b.ts(3,1): error TS18056: Declaration file contains synthesized file reference directives: '"c.d.ts"'


!!! error TS5055: Cannot write file 'c.js' because it would overwrite input file.
!!! error TS5055:   Adding a tsconfig.json file will help organize projects that contain both TypeScript and JavaScript files. Learn more at https://aka.ms/tsconfig.
==== a.ts (0 errors) ====
    class c {
    }
    
==== b.ts (1 errors) ====
    /// <reference path="c.js"/>
    // b.d.ts should have c.d.ts as the reference path
    function foo() {
    ~~~~~~~~
!!! error TS18056: Declaration file contains synthesized file reference directives: '"c.d.ts"'
    }
    
==== c.js (0 errors) ====
    function bar() {
    }